# Audio-Nodes-Tauri

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  start.bat  start.ps1  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.claude/: settings.local.json
native/audio-engine/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
native/audio-engine/src/: engine.rs  lib.rs
native/audio-engine/src/engine/: dsp.rs  process_loopback.rs  wasapi.rs
native/driver/: .gitignore  README.md  build.ps1  install.ps1  uninstall.ps1
native/driver/rebrand/: names.psd1  rebrand.ps1
scripts/: _smoke_native_cycle.cjs  _smoke_native_effects.cjs  _smoke_native_fileplayer.cjs  _smoke_native_lowlatency.cjs  check-errors.mjs  screenshot.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/main/: index.ts  trayIcon.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  index.css  main.tsx
src/renderer/src/audio/: AudioBackend.ts  AudioEngine.ts  NativeEngine.ts  backend.ts
src/renderer/src/components/: AppPicker.tsx  GuidePanel.tsx  NodeEditor.tsx  PresetsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ThemePanel.tsx  Toolbar.tsx  VUMeter.tsx  VerticalSlider.tsx  WorkspaceBar.tsx
src/renderer/src/components/nodes/: ApplicationNode.tsx  AudioHandle.tsx  BitcrusherNode.tsx  ChorusNode.tsx  CompressorNode.tsx  DelayNode.tsx  DistortionNode.tsx  EQNode.tsx  ExpanderNode.tsx  FilePlayerNode.tsx  FilterNode.tsx  GateNode.tsx  GroupNode.tsx  InputNode.tsx  LimiterNode.tsx  MixerNode.tsx  NodeBase.tsx  OutputNode.tsx  PanNode.tsx  RecorderNode.tsx  ReverbNode.tsx  TremoloNode.tsx  VirtualOutputNode.tsx  VolumeNode.tsx
src/renderer/src/lib/: color.ts  deviceMatch.ts  graphCycles.ts  graphPersistence.ts  nodeColors.ts  nodeIcons.tsx  presets.ts  theme.ts
src/renderer/src/platform/: bridge.ts
src/renderer/src/store/: audioStore.ts  settingsStore.ts
