[package]
name = "audio-engine-native"
version = "0.1.0"
edition = "2021"
description = "Native (Rust) audio engine for Audio Nodes"
license = "MIT"
publish = false

[lib]
# `rlib` alongside `cdylib` so `cargo test` can build the unit tests (e.g. the
# cycle-detection tests); the `.node` addon is still produced from the `cdylib`
# target by napi-build.
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
# Cross-platform audio device I/O (WASAPI backend on Windows). Phase 1 uses it
# for device enumeration; the capture/render streams build on the same Host.
cpal = "0.15"
# Lock-free SPSC ring buffer (device callbacks <-> engine) and a lock-free graph
# snapshot pointer (control thread swaps, audio thread loads).
ringbuf = "0.4"
arc-swap = "1"

# Direct WASAPI access for the optional IAudioClient3 low-latency output backend.
# Pinned to the same major as cpal's transitive `windows` to reuse the built crates.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Threading",
] }

[build-dependencies]
napi-build = "2"

# Still to add: windows (WASAPI per-process loopback), rubato (quality resampling),
# biquad, realfft.

[profile.release]
lto = true
strip = "symbols"
